# ai_doctor

./: .env.example  .gitignore  README.md  metadata.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  vercel.json  vite.config.ts
backend/: .env.example  init_db.py  main.py  requirements.txt  supabase_import.sql
backend/api/: api_router.py  deps.py
backend/api/routes/: auth.py  chat.py  doctors.py
backend/core/: config.py  security.py
backend/db/: database.py
backend/models/: __init__.py  chat.py  doctor.py  user.py
backend/schemas/: __init__.py  chat.py  doctor.py  user.py
backend/scripts/: export_mysql_to_supabase_sql.py
backend/services/: gemini_service.py  supabase_store.py
src/: App.tsx  constants.ts  index.css  types.ts
src/components/: Layout.tsx
src/pages/: ChatPage.tsx  DoctorDetailsPage.tsx  HistoryPage.tsx  HomePage.tsx  LoginPage.tsx  ProfileEditPage.tsx  ProfilePage.tsx  RegisterPage.tsx
src/services/: api.ts  geminiService.ts
tests/: app.spec.ts  full-flow.spec.ts  login-profile.spec.ts  profile-edit.spec.ts
