[project]
name = "ai-doctor-backend"
version = "0.1.0"
description = "AI Doctor backend for Vercel Python runtime"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.1",
  "sqlalchemy>=2.0.28",
  "pymysql>=1.1.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt==4.0.1",
  "python-jose[cryptography]>=3.3.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.24.1",
  "pydantic>=2.6.4",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
